yet more walkthroughs, fix centering issue on ios

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -19,14 +19,15 @@
 }
 
 div.container4 p {
-    margin: 0;
     position: absolute;
     font-family: Lato;
     font-size: 20px;
     top: 50%;
     left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%) }
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
 
 .w3-card-4 {
   background-color: white;
